# Gear-Demo

./: README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
gear-calc/: Cargo.toml
gear-calc/src/: lib.rs  main.rs
src/: App.css  App.tsx  Gear.tsx  TopBar.tsx  main.tsx
src/app/: store.ts
src/app/features/: gearsSlice.ts
